infrastructure/container-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  labels:
    app: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /var/lib/registry
            - name: auth-volume
              mountPath: /auth
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: docker-registry-pvc
        - name: auth-volume
          secret: 
            secretName: auth-secret
