infrastructure/container-registry/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: docker-registry-ingress
  namespace: docker-registry
spec:
  tls:
    secretName: certificates
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`registry.felipecisotto.com.br`)
      kind: Rule
      services:
        - name: docker-registry-service
          port: 5000
---
